--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   }
   .carousel-inner img {
     -webkit-filter: grayscale(90%);
-    filter: grayscale(90%); /* make all photos black and white */ 
-    width: 20%; /* Set width to 100% */
+    filter: grayscale(90%);  
+    width: 20%;
     margin: auto;
     padding-top: 100px;
   }
@@ -45,7 +45,7 @@
   }
   @media (max-width: 600px) {
     .carousel-caption {
-      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+      display: none; 
     }
     .carousel-inner img {
         width: 100%;
@@ -180,7 +180,7 @@
 </nav>
 
 
-    <!-- Wrapper for slides -->
+    <!-- kuva -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="img/IMG_8454.jpg" alt="Minun kuva">
@@ -210,43 +210,9 @@
 
   </div>
   
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">×</button>
-          <h4><span class="glyphicon glyphicon-lock"></span> Tickets</h4>
-        </div>
-        <div class="modal-body">
-          <form role="form">
-            <div class="form-group">
-              <label for="psw"><span class="glyphicon glyphicon-shopping-cart"></span> Tickets, $23 per person</label>
-              <input type="number" class="form-control" id="psw" placeholder="How many?">
-            </div>
-            <div class="form-group">
-              <label for="usrname"><span class="glyphicon glyphicon-user"></span> Send To</label>
-              <input type="text" class="form-control" id="usrname" placeholder="Enter email">
-            </div>
-              <button type="submit" class="btn btn-block">Pay 
-                <span class="glyphicon glyphicon-ok"></span>
-              </button>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-            <span class="glyphicon glyphicon-remove"></span> Cancel
-          </button>
-          <p>Need <a href="#">help?</a></p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!-- Container (Contact Section) -->
+
+<!-- otayhteytta (Contact Section) -->
 <div id="otayhteytta" class="container">
   <h3 class="text-center">Ota yhteyttä!</h3>
 
@@ -292,31 +258,29 @@
 
 <script>
 $(document).ready(function(){
-  // Initialize Tooltip
+
   $('[data-toggle="tooltip"]').tooltip(); 
   
-  // Add smooth scrolling to all links in navbar + footer link
+
   $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
 
-    // Make sure this.hash has a value before overriding default behavior
+
     if (this.hash !== "") {
 
-      // Prevent default anchor click behavior
       event.preventDefault();
 
-      // Store hash
+
       var hash = this.hash;
 
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (900) specifies the number of milliseconds it takes to scroll to the specified area
+
       $('html, body').animate({
         scrollTop: $(hash).offset().top
       }, 900, function(){
    
-        // Add hash (#) to URL when done scrolling (default click behavior)
+
         window.location.hash = hash;
       });
-    } // End if
+    } 
   });
 })
 </script>
