--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 <!-- Esittely -->
 <div id="Esittely" class="container text-center">
-  <h3>Jonna Sutinen</h3>
+  <h3>Minusta..</h3>
   <p class="text-center">Hei, olen Jonna Sutinen<br> Olen aikuisopiskelijana esedulla ja opiskelen ohjelmiston kehittämistä ja verkkopalveluiden teknistä toteuttamista.</p>
   <p></p>
   <br>
